package Game.Gameplay.Entities;

public class Coords {
    private final int x, y;
    public Coords(int x, int y) {
        this.x = x;
        this.y = y;
    }

    public int getX() {
        return x;
    }

    public int getY() {
        return y;
    }
}
